[project]
name = "pydata-demo"
version = "0.1.0"
description = "PyData Tallinn + Wise, 2025: Graphs on big data: why don't you use Neo4j?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphframes-py==0.10.0",
    "marimo>=0.18.0",
    "pyspark==3.5.5",
]
[tool.marimo.runtime]
pythonpath = ["pydata-demo/"]
dotenv = [".env", ".env.testing"]
