[project]
name = "pydata-demo"
version = "0.1.0"
description = "PyData Tallinn + Wise, 2025: Graphs on big data: why don't you use Neo4j?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphframes-py==0.10.0",
    "marimo[recommended]>=0.18.0",
    "openai>=2.8.1",
    "pyspark==3.5.5",
    "python-lsp-server>=1.13.2",
]
